// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot, empty states > ChatEmptyState: fresh session, set-up-a-workflow CTA 1`] = `
<div
  class="flex flex-col items-center justify-center gap-5 px-6 py-16 text-center mx-auto w-full max-w-[640px]"
>
  <div
    class="flex items-center justify-center"
  >
    <span
      aria-hidden="true"
      class="inline-block shrink-0 text-primary"
      style="width: 128px; height: 128px; background-color: currentcolor;"
    />
  </div>
  <div
    class="flex flex-col gap-1.5"
  >
    <span
      class="text-2xs font-semibold uppercase tracking-eyebrow tracking-[0.12em] text-muted-foreground/70"
    >
      fresh session
    </span>
    <h2
      class="text-base font-semibold text-foreground"
    >
      Populate the context
    </h2>
    <p
      class="text-sm leading-relaxed text-muted-foreground"
    >
      What you type becomes the shared brief every spawned agent starts from.
    </p>
  </div>
  <ul
    class="flex flex-wrap items-center justify-center gap-1.5 text-2xs text-muted-foreground/70"
  >
    <li
      class="inline-flex items-center gap-1 rounded-full border border-border-soft bg-background px-2 py-0.5 text-2xs"
    >
      <span>
        what to build
      </span>
    </li>
    <li
      class="inline-flex items-center gap-1 rounded-full border border-border-soft bg-background px-2 py-0.5 text-2xs"
    >
      <span>
        constraints and non-goals
      </span>
    </li>
    <li
      class="inline-flex items-center gap-1 rounded-full border border-border-soft bg-background px-2 py-0.5 text-2xs"
    >
      <span>
        the first agent
      </span>
    </li>
  </ul>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap gap-1.5 rounded-md border font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] bg-muted text-foreground hover:bg-muted/70 border-border h-7 px-2.5 text-xs"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-waypoints"
      fill="none"
      height="13"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m10.586 5.414-5.172 5.172"
      />
      <path
        d="m18.586 13.414-5.172 5.172"
      />
      <path
        d="M6 12h12"
      />
      <circle
        cx="12"
        cy="20"
        r="2"
      />
      <circle
        cx="12"
        cy="4"
        r="2"
      />
      <circle
        cx="20"
        cy="12"
        r="2"
      />
      <circle
        cx="4"
        cy="12"
        r="2"
      />
    </svg>
    Set up a workflow
  </button>
</div>
`;

exports[`snapshot, empty states > NewSessionView: no workflows 1`] = `
<div
  class="flex h-full w-full items-center justify-center bg-background py-6 motion-safe:animate-studio-in"
>
  <div
    class="flex h-full max-h-full w-full max-w-2xl flex-col overflow-hidden"
  >
    <div
      class="relative min-h-0 flex-1"
    >
      <div
        class="h-full max-h-[inherit] overflow-y-auto [scrollbar-width:none] [&::-webkit-scrollbar]:hidden px-6 py-5"
      >
        <div
          class="flex w-full flex-col gap-6"
        >
          <section
            class="flex flex-col"
          >
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center justify-between gap-2"
              >
                <span
                  class="text-2xs font-semibold uppercase tracking-eyebrow text-muted-foreground flex items-center gap-1.5"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-target"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="2"
                    />
                  </svg>
                  Session details
                </span>
              </div>
              <p
                class="text-2xs text-muted-foreground/70"
              >
                Give the agents a clear outcome and any supporting context they should have.
              </p>
            </div>
            <div
              class="flex flex-col gap-2 py-4 first:pt-0 last:pb-0 sm:flex-row sm:items-center sm:justify-between sm:gap-6"
            >
              <div
                class="flex min-w-40 shrink flex-col gap-0.5"
              >
                <span
                  class="text-xs font-medium text-foreground"
                >
                  Goal
                </span>
                <p
                  class="text-2xs leading-relaxed text-muted-foreground"
                >
                  What this session should accomplish. This becomes the agents' primary context.
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <div
                  class="flex w-full items-start gap-1.5 sm:w-96"
                >
                  <textarea
                    aria-label="Goal"
                    class="w-full rounded-md border border-border bg-background px-2.5 py-2 text-sm leading-5 text-foreground shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] disabled:opacity-50 resize-none transition-[border-color,box-shadow] focus-visible:shadow-md min-w-0 flex-1"
                    placeholder="Refactor auth domain to extract token validation into a shared module…"
                    style="overflow-y: hidden;"
                  />
                  <button
                    aria-label="Open goal editor"
                    class="shrink-0 rounded-md border border-border p-2 text-muted-foreground motion-safe:transition-colors hover:bg-muted hover:text-foreground"
                    title="Open goal editor"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-expand"
                      fill="none"
                      height="13"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="13"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m15 15 6 6"
                      />
                      <path
                        d="m15 9 6-6"
                      />
                      <path
                        d="M21 16v5h-5"
                      />
                      <path
                        d="M21 8V3h-5"
                      />
                      <path
                        d="M3 16v5h5"
                      />
                      <path
                        d="m3 21 6-6"
                      />
                      <path
                        d="M3 8V3h5"
                      />
                      <path
                        d="M9 9 3 3"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              aria-orientation="horizontal"
              class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
              role="separator"
            />
            <div
              class="flex flex-col gap-2 py-4 first:pt-0 last:pb-0 sm:flex-row sm:items-center sm:justify-between sm:gap-6"
            >
              <div
                class="flex min-w-40 shrink flex-col gap-0.5"
              >
                <span
                  class="text-xs font-medium text-foreground"
                >
                  Attachments
                </span>
                <p
                  class="text-2xs leading-relaxed text-muted-foreground"
                >
                  Images and files the agents can read on demand when they need more context.
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <div
                  class="flex w-full flex-col gap-2 rounded-lg border border-dashed p-3 motion-safe:transition-colors sm:w-96 border-border-soft"
                  data-drop-composer="true"
                >
                  <input
                    accept="image/*,.pdf,.csv,.tsv,.txt,.log,.md,.markdown,.json,.xml,.yaml,.yml,.docx,.xlsx"
                    hidden=""
                    multiple=""
                    type="file"
                  />
                  <button
                    class="inline-flex w-fit items-center gap-1.5 rounded-md border border-border px-2.5 py-1 text-xs motion-safe:transition-colors text-muted-foreground hover:bg-muted hover:text-foreground"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-paperclip"
                      fill="none"
                      height="13"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="13"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
                      />
                    </svg>
                    Add files
                  </button>
                </div>
              </div>
            </div>
          </section>
          <div
            aria-orientation="horizontal"
            class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
            role="separator"
          />
          <section
            class="flex flex-col"
          >
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center justify-between gap-2"
              >
                <span
                  class="text-2xs font-semibold uppercase tracking-eyebrow text-muted-foreground flex items-center gap-1.5"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-git-branch"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 6a9 9 0 0 0-9 9V3"
                    />
                    <circle
                      cx="18"
                      cy="6"
                      r="3"
                    />
                    <circle
                      cx="6"
                      cy="18"
                      r="3"
                    />
                  </svg>
                  Branch
                </span>
              </div>
              <p
                class="text-2xs text-muted-foreground/70"
              >
                Each session uses its own worktree on a new or existing local branch.
              </p>
            </div>
            <div
              class="flex flex-col gap-2 py-4 first:pt-0 last:pb-0 sm:flex-row sm:items-center sm:justify-between sm:gap-6"
            >
              <div
                class="flex min-w-40 shrink flex-col gap-0.5"
              >
                <span
                  class="text-xs font-medium text-foreground"
                >
                  Source
                </span>
                <p
                  class="text-2xs leading-relaxed text-muted-foreground"
                >
                  Create a fresh branch or attach this session to one.
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <div
                  aria-label="Branch source"
                  class="gap-1 rounded-lg border border-border-soft/60 bg-subtle/30 p-1 inline-flex items-center"
                  role="tablist"
                >
                  <button
                    aria-selected="true"
                    class="relative flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] px-2.5 py-1 text-xs bg-background text-foreground shadow-sm"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="min-w-0"
                    >
                      <span
                        class="block truncate"
                      >
                        New
                      </span>
                    </span>
                  </button>
                  <button
                    aria-selected="false"
                    class="relative flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] px-2.5 py-1 text-xs text-muted-foreground hover:bg-foreground/5 hover:text-foreground"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="min-w-0"
                    >
                      <span
                        class="block truncate"
                      >
                        Existing
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              aria-orientation="horizontal"
              class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
              role="separator"
            />
            <div
              class="flex flex-col gap-2 py-4 first:pt-0 last:pb-0 sm:flex-row sm:items-center sm:justify-between sm:gap-6"
            >
              <div
                class="flex min-w-40 shrink flex-col gap-0.5"
              >
                <span
                  class="text-xs font-medium text-foreground"
                >
                  Branch name
                </span>
                <p
                  class="text-2xs leading-relaxed text-muted-foreground"
                >
                  The workspace prefix stays fixed while the goal suggests a concise slug.
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <div
                  class="flex w-full items-center gap-1.5 sm:w-96"
                >
                  <span
                    class="shrink-0 font-mono text-xs text-muted-foreground"
                  >
                    goodboy
                    /
                  </span>
                  <input
                    aria-label="Branch slug"
                    autocapitalize="off"
                    autocorrect="off"
                    class="w-full rounded-md border border-border bg-background px-2.5 text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] disabled:opacity-50 h-8 min-w-0 flex-1 font-mono text-sm"
                    placeholder="branch-slug"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                  <button
                    aria-label="Generate branch name from goal"
                    class="shrink-0 rounded-md border border-border p-2 text-xs motion-safe:transition-colors cursor-not-allowed text-muted-foreground/30"
                    disabled=""
                    title="Generate branch name from goal"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-wand-sparkles"
                      fill="none"
                      height="13"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="13"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
                      />
                      <path
                        d="m14 7 3 3"
                      />
                      <path
                        d="M5 6v4"
                      />
                      <path
                        d="M19 14v4"
                      />
                      <path
                        d="M10 2v2"
                      />
                      <path
                        d="M7 8H3"
                      />
                      <path
                        d="M21 16h-4"
                      />
                      <path
                        d="M11 3H9"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="pointer-events-none absolute to-transparent motion-safe:transition-opacity duration-200 inset-x-0 top-0 bg-gradient-to-b from-background opacity-0"
        style="height: 24px;"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none absolute to-transparent motion-safe:transition-opacity duration-200 inset-x-0 bottom-0 bg-gradient-to-t from-background opacity-0"
        style="height: 24px;"
      />
    </div>
    <div
      aria-orientation="horizontal"
      class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
      role="separator"
    />
    <footer
      class="flex shrink-0 items-center gap-3 px-6 py-3"
    >
      <div
        class="flex min-w-0 flex-1 items-center gap-3"
      />
      <button
        class="inline-flex items-center justify-center whitespace-nowrap gap-1.5 rounded-md border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] border-0 text-foreground hover:bg-muted h-8 px-3 text-sm"
        type="button"
      >
        Cancel
      </button>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] bg-primary text-primary-foreground hover:bg-primary/90 h-8 px-3 text-sm"
        disabled=""
        type="button"
      >
        Create session
      </button>
    </footer>
  </div>
</div>
`;

exports[`snapshot, empty states > NoWorkspaceScreen: no workspace, add-workspace CTA 1`] = `
<div
  class="relative flex h-full w-full items-center justify-center overflow-hidden px-6"
>
  <div
    aria-hidden="true"
    class="pointer-events-none absolute inset-0"
    style="background: radial-gradient(ellipse at center, transparent 0%, transparent 40%, var(--color-background) 100%);"
  />
  <div
    class="flex flex-col items-center gap-10 px-10 py-14 text-center relative max-w-2xl"
  >
    <span
      aria-hidden="true"
      class="inline-block shrink-0 text-primary"
      style="width: 96px; height: 96px; background-color: currentcolor;"
    />
    <div
      class="flex flex-col gap-3"
    >
      <h2
        class="text-2xl font-semibold tracking-tight text-foreground"
      >
        Welcome to Goodboy
      </h2>
      <p
        class="max-w-md text-sm leading-relaxed text-muted-foreground"
      >
        Point at a git repo to create your first workspace. Every session spins up its own worktree and branch, your main checkout stays untouched.
      </p>
    </div>
    <div
      class=""
    >
      <button
        class="inline-flex items-center gap-2 rounded-lg bg-primary px-6 py-2.5 text-sm font-medium text-primary-foreground shadow-sm motion-safe:transition-colors hover:bg-primary/90"
        type="button"
      >
        Add workspace
      </button>
    </div>
  </div>
</div>
`;

exports[`snapshot, empty states > NotificationCenter: no notifications 1`] = `
<div
  aria-label="Notifications"
  aria-live="polite"
  role="region"
>
  <button
    aria-label="Notifications"
    class="relative flex items-center justify-center rounded p-1.5 motion-safe:transition-colors text-muted-foreground hover:text-foreground hover:bg-muted/50"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-bell"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.268 21a2 2 0 0 0 3.464 0"
      />
      <path
        d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
      />
    </svg>
  </button>
</div>
`;

exports[`snapshot, empty states > QuickActionsPopover: no skills / empty items 1`] = `
<div
  class="absolute bottom-full left-0 right-0 z-50 mb-1 overflow-hidden rounded-md border border-border bg-subtle shadow-md"
>
  <div
    class="flex items-start gap-2.5 text-left px-3 py-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search-x mt-0.5 shrink-0 text-info"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m13.5 8.5-5 5"
      />
      <path
        d="m8.5 8.5 5 5"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
      <path
        d="m21 21-4.3-4.3"
      />
    </svg>
    <div
      class="flex min-w-0 flex-1 flex-col gap-1"
    >
      <span
        class="text-xs font-medium text-foreground"
      >
        no skills. create one in settings
      </span>
    </div>
  </div>
</div>
`;

exports[`snapshot, empty states > SkillsPanel: no skills 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex flex-col gap-1"
  >
    <div
      class="flex items-center justify-between gap-2"
    >
      <span
        class="text-2xs font-semibold uppercase tracking-eyebrow text-muted-foreground flex items-center gap-1.5"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-wrench"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
          />
        </svg>
        Skills
      </span>
      <div
        class="flex items-center gap-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap gap-1.5 rounded-md border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] border-0 text-foreground hover:bg-muted h-7 px-2.5 text-xs"
          type="button"
        >
          Rescan
        </button>
      </div>
    </div>
    <p
      class="text-2xs text-muted-foreground/70"
    >
      Reusable prompt fragments agents can opt into.
    </p>
  </div>
  <div
    class="flex flex-col items-center gap-3 px-6 py-10 text-center"
  >
    <span
      class="flex size-12 items-center justify-center rounded-full bg-accent/10 text-accent"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-wrench"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
        />
      </svg>
    </span>
    <div
      class="flex flex-col gap-1"
    >
      <span
        class="text-sm font-medium text-foreground"
      >
        No skills yet
      </span>
      <span
        class="max-w-xs text-xs leading-relaxed text-muted-foreground"
      >
        A skill is a reusable prompt fragment agents can opt into by name. Create one, or rescan to pick up skill files already on disk.
      </span>
    </div>
    <div
      class=""
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] bg-primary text-primary-foreground hover:bg-primary/90 h-7 px-2.5 text-xs"
        type="button"
      >
        New skill
      </button>
    </div>
  </div>
</div>
`;

exports[`snapshot, empty states > WorkspacesSidebar: no workspace selected 1`] = `
<div
  class="flex h-full min-h-0 flex-col"
>
  <div
    class="flex min-h-0 flex-1"
  >
    <div
      class="flex flex-col items-center gap-3 text-center h-full justify-center px-6 py-10"
    >
      <span
        class="flex size-12 items-center justify-center rounded-full bg-info/10 text-info"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-folder-plus"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10v6"
          />
          <path
            d="M9 13h6"
          />
          <path
            d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
          />
        </svg>
      </span>
      <div
        class="flex flex-col gap-1"
      >
        <span
          class="text-sm font-medium text-foreground"
        >
          No workspace yet
        </span>
        <span
          class="max-w-xs text-xs leading-relaxed text-muted-foreground"
        >
          Point at a local git repo. Each session opens its own worktree off it.
        </span>
      </div>
      <div
        class=""
      >
        <button
          class="inline-flex items-center gap-1.5 rounded-md bg-info/15 px-3 py-1.5 text-xs font-medium text-info transition-colors hover:bg-info/25"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus"
            fill="none"
            height="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          <span>
            Add workspace
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshot, error states > App init error, BootSplash with error message 1`] = `
<div
  class="relative flex h-screen flex-col items-center justify-center gap-10 bg-background text-foreground"
>
  <div
    class="flex flex-col items-center gap-5"
  >
    <div
      class="relative flex h-24 w-24 items-center justify-center text-primary"
    >
      <div
        class="shadow-glow-primary relative flex h-full w-full items-center justify-center rounded-full bg-subtle ring-1 ring-border-soft"
      >
        <span
          aria-hidden="true"
          class="inline-block shrink-0 text-primary"
          style="width: 52px; height: 52px; background-color: currentcolor;"
        />
      </div>
    </div>
    <div
      class="flex flex-col items-center gap-0.5"
    >
      <span
        class="text-lg font-bold tracking-tight"
      >
        Goodboy
      </span>
      <span
        class="text-xs tracking-tight text-muted-foreground/60"
      >
        workspace orchestrator for coding agents
      </span>
    </div>
  </div>
  <div
    class="flex w-64 flex-col gap-3 rounded-lg border border-danger/30 bg-danger/5 p-4 font-mono text-2xs"
    role="alert"
  >
    <div
      class="flex flex-col gap-1"
    >
      <span
        class="text-danger"
      >
        ✗ 
        init
         failed
      </span>
      <p
        class="leading-relaxed text-danger/70"
      >
        database migration failed
      </p>
    </div>
    <div
      class="flex flex-col gap-1.5"
    >
      <button
        class="text-left text-muted-foreground/60 underline-offset-2 hover:underline"
        type="button"
      >
        report on github ↗
      </button>
    </div>
  </div>
</div>
`;

exports[`snapshot, error states > BootSplash: boot-error phase 1`] = `
<div
  class="relative flex h-screen flex-col items-center justify-center gap-10 bg-background text-foreground"
>
  <div
    class="flex flex-col items-center gap-5"
  >
    <div
      class="relative flex h-24 w-24 items-center justify-center text-primary"
    >
      <div
        class="shadow-glow-primary relative flex h-full w-full items-center justify-center rounded-full bg-subtle ring-1 ring-border-soft"
      >
        <span
          aria-hidden="true"
          class="inline-block shrink-0 text-primary"
          style="width: 52px; height: 52px; background-color: currentcolor;"
        />
      </div>
    </div>
    <div
      class="flex flex-col items-center gap-0.5"
    >
      <span
        class="text-lg font-bold tracking-tight"
      >
        Goodboy
      </span>
      <span
        class="text-xs tracking-tight text-muted-foreground/60"
      >
        workspace orchestrator for coding agents
      </span>
    </div>
  </div>
  <div
    class="flex w-64 flex-col gap-3 rounded-lg border border-danger/30 bg-danger/5 p-4 font-mono text-2xs"
    role="alert"
  >
    <div
      class="flex flex-col gap-1"
    >
      <span
        class="text-danger"
      >
        ✗ 
        init
         failed
      </span>
      <p
        class="leading-relaxed text-danger/70"
      >
        detecting-cli failed
      </p>
    </div>
    <div
      class="flex flex-col gap-1.5"
    >
      <button
        class="text-left text-muted-foreground/60 underline-offset-2 hover:underline"
        type="button"
      >
        report on github ↗
      </button>
    </div>
  </div>
</div>
`;

exports[`snapshot, error states > DeleteSessionConfirm: error state 1`] = `
<div
  aria-label="Delete session?"
  class="flex min-w-0 flex-col gap-2 rounded-lg border p-2.5 text-2xs border-danger/40 bg-danger/10"
  role="group"
>
  <div
    class="flex min-w-0 items-start gap-1.5"
  >
    <span
      aria-hidden="true"
      class="mt-px flex shrink-0 items-center text-danger"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-trash2 lucide-trash-2"
        fill="none"
        height="12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 11v6"
        />
        <path
          d="M14 11v6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
        />
        <path
          d="M3 6h18"
        />
        <path
          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
      </svg>
    </span>
    <div
      class="flex min-w-0 flex-col gap-0.5"
    >
      <p
        class="font-semibold text-foreground"
      >
        Delete session?
      </p>
      <p
        class="text-muted-foreground"
      >
        Permanently removes the worktree and transcripts for this session from this device. The branch is preserved for manual merge.
      </p>
    </div>
  </div>
  <p
    class="truncate rounded-md border border-border-soft bg-subtle px-2 py-1 font-mono text-foreground"
  >
    test goal
  </p>
  <p
    class="font-medium text-danger"
  >
    This cannot be undone. To keep the history, archive instead.
  </p>
  <button
    class="inline-flex w-fit items-center gap-1 rounded-md border border-border px-2 py-0.5 font-semibold text-foreground motion-safe:transition-colors hover:bg-muted disabled:cursor-not-allowed disabled:opacity-60"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-archive"
      fill="none"
      height="11"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="11"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="5"
        rx="1"
        width="20"
        x="2"
        y="3"
      />
      <path
        d="M4 8v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8"
      />
      <path
        d="M10 12h4"
      />
    </svg>
    Archive instead
  </button>
  <div
    class="flex items-center justify-end gap-2"
  >
    <button
      class="rounded-md border border-border px-2 py-0.5 font-semibold text-foreground motion-safe:transition-colors hover:bg-muted disabled:cursor-not-allowed disabled:opacity-60"
      type="button"
    >
      Cancel
    </button>
    <button
      class="rounded-md px-2 py-0.5 font-semibold motion-safe:transition-opacity hover:opacity-90 disabled:cursor-not-allowed disabled:opacity-60 bg-danger text-danger-foreground"
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;

exports[`snapshot, error states > NewSessionView: form error 1`] = `
<div
  class="flex h-full w-full items-center justify-center bg-background py-6 motion-safe:animate-studio-in"
>
  <div
    class="flex h-full max-h-full w-full max-w-2xl flex-col overflow-hidden"
  >
    <div
      class="relative min-h-0 flex-1"
    >
      <div
        class="h-full max-h-[inherit] overflow-y-auto [scrollbar-width:none] [&::-webkit-scrollbar]:hidden px-6 py-5"
      >
        <div
          class="flex w-full flex-col gap-6"
        >
          <section
            class="flex flex-col"
          >
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center justify-between gap-2"
              >
                <span
                  class="text-2xs font-semibold uppercase tracking-eyebrow text-muted-foreground flex items-center gap-1.5"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-target"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="2"
                    />
                  </svg>
                  Session details
                </span>
              </div>
              <p
                class="text-2xs text-muted-foreground/70"
              >
                Give the agents a clear outcome and any supporting context they should have.
              </p>
            </div>
            <div
              class="flex flex-col gap-2 py-4 first:pt-0 last:pb-0 sm:flex-row sm:items-center sm:justify-between sm:gap-6"
            >
              <div
                class="flex min-w-40 shrink flex-col gap-0.5"
              >
                <span
                  class="text-xs font-medium text-foreground"
                >
                  Goal
                </span>
                <p
                  class="text-2xs leading-relaxed text-muted-foreground"
                >
                  What this session should accomplish. This becomes the agents' primary context.
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <div
                  class="flex w-full items-start gap-1.5 sm:w-96"
                >
                  <textarea
                    aria-label="Goal"
                    class="w-full rounded-md border border-border bg-background px-2.5 py-2 text-sm leading-5 text-foreground shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] disabled:opacity-50 resize-none transition-[border-color,box-shadow] focus-visible:shadow-md min-w-0 flex-1"
                    placeholder="Refactor auth domain to extract token validation into a shared module…"
                    style="overflow-y: hidden;"
                  />
                  <button
                    aria-label="Open goal editor"
                    class="shrink-0 rounded-md border border-border p-2 text-muted-foreground motion-safe:transition-colors hover:bg-muted hover:text-foreground"
                    title="Open goal editor"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-expand"
                      fill="none"
                      height="13"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="13"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m15 15 6 6"
                      />
                      <path
                        d="m15 9 6-6"
                      />
                      <path
                        d="M21 16v5h-5"
                      />
                      <path
                        d="M21 8V3h-5"
                      />
                      <path
                        d="M3 16v5h5"
                      />
                      <path
                        d="m3 21 6-6"
                      />
                      <path
                        d="M3 8V3h5"
                      />
                      <path
                        d="M9 9 3 3"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              aria-orientation="horizontal"
              class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
              role="separator"
            />
            <div
              class="flex flex-col gap-2 py-4 first:pt-0 last:pb-0 sm:flex-row sm:items-center sm:justify-between sm:gap-6"
            >
              <div
                class="flex min-w-40 shrink flex-col gap-0.5"
              >
                <span
                  class="text-xs font-medium text-foreground"
                >
                  Attachments
                </span>
                <p
                  class="text-2xs leading-relaxed text-muted-foreground"
                >
                  Images and files the agents can read on demand when they need more context.
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <div
                  class="flex w-full flex-col gap-2 rounded-lg border border-dashed p-3 motion-safe:transition-colors sm:w-96 border-border-soft"
                  data-drop-composer="true"
                >
                  <input
                    accept="image/*,.pdf,.csv,.tsv,.txt,.log,.md,.markdown,.json,.xml,.yaml,.yml,.docx,.xlsx"
                    hidden=""
                    multiple=""
                    type="file"
                  />
                  <button
                    class="inline-flex w-fit items-center gap-1.5 rounded-md border border-border px-2.5 py-1 text-xs motion-safe:transition-colors text-muted-foreground hover:bg-muted hover:text-foreground"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-paperclip"
                      fill="none"
                      height="13"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="13"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
                      />
                    </svg>
                    Add files
                  </button>
                </div>
              </div>
            </div>
          </section>
          <div
            aria-orientation="horizontal"
            class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
            role="separator"
          />
          <section
            class="flex flex-col"
          >
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center justify-between gap-2"
              >
                <span
                  class="text-2xs font-semibold uppercase tracking-eyebrow text-muted-foreground flex items-center gap-1.5"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-git-branch"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 6a9 9 0 0 0-9 9V3"
                    />
                    <circle
                      cx="18"
                      cy="6"
                      r="3"
                    />
                    <circle
                      cx="6"
                      cy="18"
                      r="3"
                    />
                  </svg>
                  Branch
                </span>
              </div>
              <p
                class="text-2xs text-muted-foreground/70"
              >
                Each session uses its own worktree on a new or existing local branch.
              </p>
            </div>
            <div
              class="flex flex-col gap-2 py-4 first:pt-0 last:pb-0 sm:flex-row sm:items-center sm:justify-between sm:gap-6"
            >
              <div
                class="flex min-w-40 shrink flex-col gap-0.5"
              >
                <span
                  class="text-xs font-medium text-foreground"
                >
                  Source
                </span>
                <p
                  class="text-2xs leading-relaxed text-muted-foreground"
                >
                  Create a fresh branch or attach this session to one.
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <div
                  aria-label="Branch source"
                  class="gap-1 rounded-lg border border-border-soft/60 bg-subtle/30 p-1 inline-flex items-center"
                  role="tablist"
                >
                  <button
                    aria-selected="true"
                    class="relative flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] px-2.5 py-1 text-xs bg-background text-foreground shadow-sm"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="min-w-0"
                    >
                      <span
                        class="block truncate"
                      >
                        New
                      </span>
                    </span>
                  </button>
                  <button
                    aria-selected="false"
                    class="relative flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] px-2.5 py-1 text-xs text-muted-foreground hover:bg-foreground/5 hover:text-foreground"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="min-w-0"
                    >
                      <span
                        class="block truncate"
                      >
                        Existing
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              aria-orientation="horizontal"
              class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
              role="separator"
            />
            <div
              class="flex flex-col gap-2 py-4 first:pt-0 last:pb-0 sm:flex-row sm:items-center sm:justify-between sm:gap-6"
            >
              <div
                class="flex min-w-40 shrink flex-col gap-0.5"
              >
                <span
                  class="text-xs font-medium text-foreground"
                >
                  Branch name
                </span>
                <p
                  class="text-2xs leading-relaxed text-muted-foreground"
                >
                  The workspace prefix stays fixed while the goal suggests a concise slug.
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <div
                  class="flex w-full items-center gap-1.5 sm:w-96"
                >
                  <span
                    class="shrink-0 font-mono text-xs text-muted-foreground"
                  >
                    goodboy
                    /
                  </span>
                  <input
                    aria-label="Branch slug"
                    autocapitalize="off"
                    autocorrect="off"
                    class="w-full rounded-md border border-border bg-background px-2.5 text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] disabled:opacity-50 h-8 min-w-0 flex-1 font-mono text-sm"
                    placeholder="branch-slug"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                  <button
                    aria-label="Generate branch name from goal"
                    class="shrink-0 rounded-md border border-border p-2 text-xs motion-safe:transition-colors cursor-not-allowed text-muted-foreground/30"
                    disabled=""
                    title="Generate branch name from goal"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-wand-sparkles"
                      fill="none"
                      height="13"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="13"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
                      />
                      <path
                        d="m14 7 3 3"
                      />
                      <path
                        d="M5 6v4"
                      />
                      <path
                        d="M19 14v4"
                      />
                      <path
                        d="M10 2v2"
                      />
                      <path
                        d="M7 8H3"
                      />
                      <path
                        d="M21 16h-4"
                      />
                      <path
                        d="M11 3H9"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="pointer-events-none absolute to-transparent motion-safe:transition-opacity duration-200 inset-x-0 top-0 bg-gradient-to-b from-background opacity-0"
        style="height: 24px;"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none absolute to-transparent motion-safe:transition-opacity duration-200 inset-x-0 bottom-0 bg-gradient-to-t from-background opacity-0"
        style="height: 24px;"
      />
    </div>
    <div
      aria-orientation="horizontal"
      class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
      role="separator"
    />
    <footer
      class="flex shrink-0 items-center gap-3 px-6 py-3"
    >
      <div
        class="flex min-w-0 flex-1 items-center gap-3"
      />
      <button
        class="inline-flex items-center justify-center whitespace-nowrap gap-1.5 rounded-md border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] border-0 text-foreground hover:bg-muted h-8 px-3 text-sm"
        type="button"
      >
        Cancel
      </button>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)] bg-primary text-primary-foreground hover:bg-primary/90 h-8 px-3 text-sm"
        disabled=""
        type="button"
      >
        Create session
      </button>
    </footer>
  </div>
</div>
`;

exports[`snapshot, error states > TranscriptCard: turn error item 1`] = `
<div
  class="flex w-full items-start gap-2 rounded-md border px-2.5 py-2 text-xs border-danger/20 bg-danger/5"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-0.5 shrink-0 text-danger"
    data-testid="transcript-error-icon"
    fill="none"
    height="12"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="flex min-w-0 flex-1 flex-col gap-1"
  >
    <p
      class="min-w-0 break-words leading-relaxed text-danger"
    >
      provider failed to respond
    </p>
  </div>
</div>
`;
